# oven-gui-qt5-dev

./: .gitignore  AGENT.md  README.md  dev.md
Oven_HMI_G2L_QT5/: BUILD.md  CMakeLists.txt
Oven_HMI_G2L_QT5/assets/balsam_out/bread/: Bread.qml
Oven_HMI_G2L_QT5/assets/balsam_out/bread/meshes/: cube_079.mesh  cube_080.mesh  cube_099.mesh  plane_001.mesh
Oven_HMI_G2L_QT5/assets/balsam_out/chicken/: Chicken.qml
Oven_HMI_G2L_QT5/assets/balsam_out/chicken/meshes/: cube.mesh  cube_003.mesh  cylinder.mesh  cylinder_001.mesh  cylinder_002.mesh  plane_002.mesh  sphere.mesh  sphere_001.mesh
Oven_HMI_G2L_QT5/assets/balsam_out/fish/: Fish.qml
Oven_HMI_G2L_QT5/assets/balsam_out/fish/meshes/: circle.mesh  cube_071.mesh  cube_072.mesh  cube_073.mesh  cube_075.mesh  cube_076.mesh  cube_077.mesh  cube_078.mesh  cube_079.mesh  cube_081.mesh  cube_082.mesh  cylinder_014.mesh  cylinder_015.mesh  cylinder_016.mesh  cylinder_017.mesh  sphere_026.mesh  sphere_027.mesh  torus_003.mesh  torus_004.mesh
Oven_HMI_G2L_QT5/assets/balsam_out/meatball/: Meatball.qml
Oven_HMI_G2L_QT5/assets/balsam_out/meatball/meshes/: pan.mesh  plane_004.mesh  plate.mesh  takoyaki.mesh  wood.mesh
Oven_HMI_G2L_QT5/assets/balsam_out/pizza/: Pizza.qml
Oven_HMI_G2L_QT5/assets/balsam_out/pizza/meshes/: circle_020.mesh  cube_455.mesh  cube_456.mesh  cube_461.mesh  cube_464.mesh  cylinder_107.mesh  cylinder_109.mesh  cylinder_113.mesh  cylinder_115.mesh  cylinder_117.mesh  cylinder_118.mesh  cylinder_122.mesh  plane_074.mesh  plane_075.mesh  plane_076.mesh
Oven_HMI_G2L_QT5/assets/balsam_out/turkey/: Turkey.qml
Oven_HMI_G2L_QT5/assets/balsam_out/turkey/meshes/: cube_020.mesh  cylinder_002.mesh  cylinder_052.mesh  sphere_001.mesh  sphere_002.mesh  sphere_003.mesh
Oven_HMI_G2L_QT5/assets/convert_model/bread/: Bread.qml
Oven_HMI_G2L_QT5/assets/convert_model/chicken/: Chicken.qml
Oven_HMI_G2L_QT5/assets/convert_model/chicken/meshes/: cube_004_mesh.mesh  cylinder_001_mesh.mesh  cylinder_002_mesh.mesh  cylinder_004_mesh.mesh  plane_002_mesh.mesh
Oven_HMI_G2L_QT5/assets/convert_model/fish/: Fish.qml
Oven_HMI_G2L_QT5/assets/convert_model/fish/meshes/: mesh_mesh14.mesh  mesh_mesh19.mesh  mesh_mesh24.mesh  mesh_mesh26.mesh  mesh_mesh30.mesh  mesh_mesh33.mesh  mesh_mesh35.mesh  mesh_mesh37.mesh  mesh_mesh39.mesh  mesh_mesh41.mesh  mesh_mesh47.mesh  mesh_mesh6.mesh  sphere_026_mesh.mesh  sphere_027_mesh.mesh
Oven_HMI_G2L_QT5/assets/convert_model/meatball/: Meatball.qml
Oven_HMI_G2L_QT5/assets/convert_model/meatball/meshes/: cylinder_mesh.mesh  mesh_mesh.mesh  mesh_mesh6.mesh  mesh_mesh9.mesh  takoyaki_mesh.mesh
Oven_HMI_G2L_QT5/assets/convert_model/pizza/: Pizza.qml
Oven_HMI_G2L_QT5/assets/convert_model/pizza/meshes/: mesh_mesh38.mesh  mesh_mesh52.mesh  mesh_mesh61.mesh  mesh_mesh74.mesh  mesh_mesh82.mesh  mesh_mesh84.mesh
Oven_HMI_G2L_QT5/assets/convert_model/turkey/: Turkey.qml
Oven_HMI_G2L_QT5/assets/convert_model/turkey/meshes/: cube_001_mesh.mesh  cylinder_001_mesh.mesh  sphere_001_mesh.mesh  sphere_002_mesh.mesh
Oven_HMI_G2L_QT5/assets/models/: bread.glb
Oven_HMI_G2L_QT5/assets/models/low/: bread.glb  chicken.glb  fish.glb  meatball.glb  pizza.glb  turkey.glb
Oven_HMI_G2L_QT5/qml/: AdjustmentPage.qml  DrinkModel3D.qml  Main.qml  MenuPage.qml  ProcessingPage.qml  Screensaver.qml  StartupPage.qml  drinks.js  qml.qrc
Oven_HMI_G2L_QT5/src/: serialhandler.cpp  serialhandler.h
Oven_HMI_G2L_QT5/tools/: gen_qrc.py
Oven_HMI_G2L_fae_release/: CMakeLists.txt
Oven_HMI_G2L_fae_release/assets/convert_model/bread/: Bread.qml
Oven_HMI_G2L_fae_release/assets/convert_model/bread/meshes/: cube_201_mesh.mesh  mesh_mesh.mesh  mesh_mesh7.mesh  plane_001_mesh.mesh
Oven_HMI_G2L_fae_release/assets/convert_model/chicken/: Chicken.qml
Oven_HMI_G2L_fae_release/assets/convert_model/chicken/meshes/: cube_003_mesh.mesh  cube_006_mesh.mesh  sphere_001_mesh.mesh  sphere_002_mesh.mesh
Oven_HMI_G2L_fae_release/assets/convert_model/fish/: Fish.qml
Oven_HMI_G2L_fae_release/assets/convert_model/fish/meshes/: mesh_mesh.mesh  mesh_mesh17.mesh  mesh_mesh21.mesh  mesh_mesh28.mesh  mesh_mesh49.mesh
Oven_HMI_G2L_fae_release/assets/convert_model/meatball/: Meatball.qml
Oven_HMI_G2L_fae_release/assets/convert_model/pizza/: Pizza.qml
Oven_HMI_G2L_fae_release/assets/convert_model/pizza/meshes/: mesh_mesh.mesh  mesh_mesh24.mesh  mesh_mesh46.mesh  mesh_mesh69.mesh  mesh_mesh71.mesh  mesh_mesh87.mesh
Oven_HMI_G2L_fae_release/assets/convert_model/turkey/: Turkey.qml
Oven_HMI_G2L_fae_release/assets/convert_model/turkey/meshes/: cylinder_002_mesh.mesh  cylinder_004_mesh.mesh  sphere_003_mesh.mesh
Oven_HMI_G2L_fae_release/assets/models/: meatball.glb  turkey.glb
Oven_HMI_G2L_fae_release/qml/: AdjustmentPage.qml  CarouselMenu.qml  DrinkModel3D.qml  HomePage.qml  Main.qml  MenuPage.qml  ProcessingPage.qml  StartupPage.qml  Theme.qml  qml.qrc
Oven_HMI_G2L_fae_release/src/: FpsMonitor.h  main.cpp
Oven_HMI_gl_demo/: BUILD.md  CMakeLists.txt
Oven_HMI_gl_demo/qml/: Main.qml  qml.qrc
Oven_HMI_gl_demo/src/: BreadWindow.cpp  BreadWindow.h  FpsMonitor.cpp  FpsMonitor.h  MeshRenderer.cpp  MeshRenderer.h  MeshView.cpp  MeshView.h  main.cpp  main_win.cpp
Oven_HMI_spin_test/: BUILD.md  CMakeLists.txt
Oven_HMI_spin_test/assets/balsam_out/chicken/: Chicken.qml
Oven_HMI_spin_test/assets/balsam_out/chicken/meshes/: cube.mesh  cube_001.mesh  cube_002.mesh  cube_003.mesh  cylinder.mesh  cylinder_001.mesh  cylinder_002.mesh  plane_002.mesh  sphere.mesh  sphere_001.mesh
Oven_HMI_spin_test/assets/models/: chicken.glb
Oven_HMI_spin_test/qml/: Main.qml  qml.qrc
Oven_HMI_spin_test/src/: FpsMonitor.cpp  main.cpp
Oven_HMI_spin_test/tools/: gen_qrc.py
br2_qt5_patches/: 0001-add-qt5quick3d-package.patch  README.md
br2_qt5_patches/package/qt5/qt5quick3d/: Config.in  qt5quick3d.mk
br2_qt6_patches/: README.md  dev.md
br2_qt6_patches/package/: Config.in.host
br2_qt6_patches/package/qt6/: Config.in.patch
br2_qt6_patches/package/qt6/qt6base/: qt6base.mk.patch
br2_qt6_patches/package/qt6/qt6declarative/: Config.in  (+1 more)
(+8 files in other folders)
